k8s/apps/tailscale-agent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tailscale-agent
spec:
  selector:
    app: tailscale-agent
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
  type: ClusterIP
