k8s/apps/tailscale-agent/tests.yaml
# ---
# apiVersion: headscale.juliamertz.dev/v1
# kind: PreauthKey
# metadata:
#   name: agent-auth
# spec:
#   ephemeral: true
#   reusable: true
#   expiration: 100y
#   targetSecret: tailnet-gateway-auth
#   user:
#     name: kubernetes 
#     namespace: tailscale-agent

---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-tailnet
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: tailnet-proxy-config
    namespace: tailscale-agent

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tailnet-gateway
spec:
  gatewayClassName: envoy-tailnet
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: testing-homelab-routes
spec:
  hostnames:
    - hass.juliamertz.dev
    - hass.juliamertz.nl
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: tailnet-gateway
      namespace: tailscale-agent
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: hydra-backend
      port: 8123
